--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Michelle Grill Website</title>
-    <link rel="stylesheet" href="testcss.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
