--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </section>
         <section id="myWork">
             <h1 data-en="My Work" data-de="Meine Arbeiten">My Work</h1>
-            <p data-en="I'm excited to share some of my recent accomplishments, with even more on the horizon." data-de="Einige meiner letzten Arbeiten und noch mehr auf dem Weg!">I'm excited to share some of my recent accomplishments, with even more on the horizon.</p>
+            <p data-en="I'm excited to share some of my recent accomplishments, with even more on the horizon." data-de="Ich freue mich, einige meiner jüngsten Erfolge mit euch zu teilen – und es kommen noch viele weitere spannende Projekte!">I'm excited to share some of my recent accomplishments, with even more on the horizon.</p>
 
             <div class="work-category">
                 <h2>3D - Models</h2>
@@ -68,7 +68,7 @@
                 </div>
             </div>
 
-            <p data-en="You can download my whole Portfolio here:" data-de="Sie können hier mein vollständiges Portfolio downloaden:">You can download my whole Portfolio here:</p>
+            <p data-en="You can download my whole Portfolio here:" data-de="Sie können hier mein vollständiges Portfolio heruntrladen:">You can download my whole Portfolio here:</p>
             <p><a href="https://drive.google.com/drive/folders/1L7YgFFWgJinIFgLxFYa9mAZbYTF8jaAt?usp=drive_link" download="Portfolio">Download Portfolio here</a></p>
 
             <div class="work-category">
@@ -77,9 +77,9 @@
                 <div class="game-section">
                     <div class="game-description">
                         <h3>Divine Bliss</h3>
-                        <p data-en="Divine Bliss is a 3D card game that tells the story of Sachi, the Goddess of Happiness." data-de="Für einen genaueren Einblick in meine Erfahrungen, können Sie meinen Lebenlauf ansehen.">Divine Bliss is a 3D card game that tells the story of Sachi, the Goddess of Happiness.</p>
-                        <p data-en="Join Sachi as she descends to Earth, determined to spread joy and bliss among the people." data-de="Für einen genaueren Einblick in meine Erfahrungen, können Sie meinen Lebenlauf ansehen.">Join Sachi as she descends to Earth, determined to spread joy and bliss among the people.</p>
-                        <p data-en="Through strategic gameplay, players help Sachi fulfill her divine mission, bringing happiness to all." data-de="Für einen genaueren Einblick in meine Erfahrungen, können Sie meinen Lebenlauf ansehen.">Through strategic gameplay, players help Sachi fulfill her divine mission, bringing happiness to all.</p>
+                        <p data-en="Divine Bliss is a 3D card game that tells the story of Sachi, the Goddess of Happiness." data-de="Divine Bliss ist ein 3D-Kartenspiel, das die Geschichte von Sachi, die Göttin der Freude, erzählt.">Divine Bliss is a 3D card game that tells the story of Sachi, the Goddess of Happiness.</p>
+                        <p data-en="Join Sachi as she descends to Earth, determined to spread joy and bliss among the people." data-de="Begleite Sachi, wie sie auf die Erde hinabsteigt, entschlossen, Freude und Glück unter den Menschen zu verbreiten.">Join Sachi as she descends to Earth, determined to spread joy and bliss among the people.</p>
+                        <p data-en="Through strategic gameplay, players help Sachi fulfill her divine mission, bringing happiness to all." data-de="Durch strategisches Gameplay helfen die Spieler Sachi dabei, ihre göttliche Mission zu erfüllen und allen Glück zu schenken.">Through strategic gameplay, players help Sachi fulfill her divine mission, bringing happiness to all.</p>
                         <p><a href="https://folii.itch.io/divine-bliss" download="Divine Bliss">Download Divine Bliss here</a></p>
                     </div>
                     <div class="work-images">
@@ -92,9 +92,9 @@
                 <div class="game-section">
                     <div class="game-description">
                         <h3>Insanity</h3>
-                        <p data-en="Insanity is a 3D horror game developed as a school project in 2023." data-de="Für einen genaueren Einblick in meine Erfahrungen, können Sie meinen Lebenlauf ansehen.">Insanity is a 3D horror game developed as a school project in 2023.</p>
-                        <p data-en="The game immerses players in the story of a young protagonist trapped in a maze." data-de="Für einen genaueren Einblick in meine Erfahrungen, können Sie meinen Lebenlauf ansehen.">The game immerses players in the story of a young protagonist trapped in a maze.</p>
-                        <p data-en="As they navigate the twisting corridors, they must protect their sanity by clinging to the fragile light of their candle." data-de="Für einen genaueren Einblick in meine Erfahrungen, können Sie meinen Lebenlauf ansehen.">As they navigate the twisting corridors, they must protect their sanity by clinging to the fragile light of their candle.</p>
+                        <p data-en="Insanity is a 3D horror game developed as a school project in 2023." data-de="Insanity ist ein 3D-Horrorspiel, das 2023 im Rahmen eines Schulprojekts entwickelt wurde.">Insanity is a 3D horror game developed as a school project in 2023.</p>
+                        <p data-en="The game immerses players in the story of a young protagonist trapped in a maze." data-de="Das Spiel versetzt die Spieler in die Rolle eines jungen Protagonisten, der in einem Labyrinth gefangen ist.">The game immerses players in the story of a young protagonist trapped in a maze.</p>
+                        <p data-en="As they navigate the twisting corridors, they must protect their sanity by clinging to the fragile light of their candle." data-de="Während sie die verworrenen Gänge durchqueren, müssen sie ihren Verstand schützen, indem sie sich an das fragile Licht ihrer Kerze klammern.">As they navigate the twisting corridors, they must protect their sanity by clinging to the fragile light of their candle.</p>
                         <p><a href="https://erbschen002.itch.io/insanity" download="Insanity">Download Insanity here</a></p>
                     </div>
                     <div class="work-images">
@@ -108,7 +108,9 @@
         </section>
         <section id="mySocials">
             <h1 data-en="My Socials" data-de="Meine sozialen Medien">My Socials</h1>
-            <p data-en="If you're interested in my work, I invite you to explore my social media profiles or reach out to me via email." data-de="Wenn Sie an meiner Arbeit interessiert sind, lade ich Sie dazu ein mich via E-Mail zu kontaktieren.">If you're interested in my work, I invite you to explore my social media profiles or reach out to me via email.</p>
+            <p data-en="If you're interested in my work, I invite you to explore my social media profiles or reach out to me via email." data-de="ChatGPT
+
+Wenn sie an meiner Arbeit interessiert sind, lade ich Sie herzlich ein, meine Social-Media-Profile zu besuchen oder mich per E-Mail zu kontaktieren.">If you're interested in my work, I invite you to explore my social media profiles or reach out to me via email.</p>
 
             <div class="social-link">
                 <img src="images/Email.jpg" alt="Email" class="social-icon">
@@ -130,8 +132,8 @@
         <section id="resume">
             <h1 data-en="Download my Resume" data-de="Lebenslauf herunterladen">Download my Resume</h1>
 
-            <p data-en="For a deeper look into my background and experience, feel free to check out my resume." data-de="Für einen genaueren Einblick in meine Erfahrungen, können Sie meinen Lebenlauf ansehen.">For a deeper look into my background and experience, feel free to check out my resume.</p>
-            <p data-en="I'd love to connect and discuss how we can work together!" data-de="Ich würde mich gerne mit Ihnen zusammensetzen und über eine mögliche Zusammenarbeit reden!">I'd love to connect and discuss how we can work together!</p>
+            <p data-en="For a deeper look into my background and experience, feel free to check out my resume." data-de="Für einen detaillierten Einblick in meinen Werdegang und meine Erfahrungen können Sie gerne meinen Lebenslauf ansehen..">For a deeper look into my background and experience, feel free to check out my resume.</p>
+            <p data-en="I'd love to connect and discuss how we can work together!" data-de="Ich freue mich darauf, in Kontakt zu treten und darüber zu sprechen, wie wir zusammenarbeiten können!">I'd love to connect and discuss how we can work together!</p>
             <p>
                 <a href="Grill_CV.pdf" download="Michelle_Grill_Resume.pdf">Download</a>
             </p>
