--- a/index.html
+++ b/index.html
@@ -108,9 +108,7 @@
         </section>
         <section id="mySocials">
             <h1 data-en="My Socials" data-de="Meine sozialen Medien">My Socials</h1>
-            <p data-en="If you're interested in my work, I invite you to explore my social media profiles or reach out to me via email." data-de="ChatGPT
-
-Wenn sie an meiner Arbeit interessiert sind, lade ich Sie herzlich ein, meine Social-Media-Profile zu besuchen oder mich per E-Mail zu kontaktieren.">If you're interested in my work, I invite you to explore my social media profiles or reach out to me via email.</p>
+            <p data-en="If you're interested in my work, I invite you to explore my social media profiles or reach out to me via email." data-de="Wenn sie an meiner Arbeit interessiert sind, lade ich Sie herzlich ein, meine Social-Media-Profile zu besuchen oder mich per E-Mail zu kontaktieren.">If you're interested in my work, I invite you to explore my social media profiles or reach out to me via email.</p>
 
             <div class="social-link">
                 <img src="images/Email.jpg" alt="Email" class="social-icon">
